--- a/test.ipynb
+++ b/test.ipynb
@@ -1837,56 +1837,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MAPE for subjects ending with '-01': 1.24%\n",
-      "MAPE for subjects ending with '-02': 1.70%\n",
-      "MAPE for subjects ending with '-03': 1.05%\n",
-      "MAPE for subjects ending with '-04': 1.43%\n",
-      "MAPE for subjects ending with '-05': 0.88%\n",
-      "MAPE for subjects ending with '-06': 1.31%\n"
+      "MAPE for subjects ending with '-01': 1.38%\n",
+      "MAPE for subjects ending with '-02': 1.77%\n",
+      "MAPE for subjects ending with '-03': 3.94%\n",
+      "MAPE for subjects ending with '-04': 3.20%\n",
+      "MAPE for subjects ending with '-05': 1.00%\n",
+      "MAPE for subjects ending with '-06': 0.96%\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Darren\\AppData\\Local\\Temp\\ipykernel_29160\\1877111846.py:22: SettingWithCopyWarning: \n",
+      "C:\\Users\\Darren\\AppData\\Local\\Temp\\ipykernel_29160\\3169275866.py:22: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  filtered_df['Absolute_Percentage_Error'] = abs((filtered_df[actual_col] - filtered_df[predicted_col]) / filtered_df[actual_col]) * 100\n",
-      "C:\\Users\\Darren\\AppData\\Local\\Temp\\ipykernel_29160\\1877111846.py:22: SettingWithCopyWarning: \n",
+      "C:\\Users\\Darren\\AppData\\Local\\Temp\\ipykernel_29160\\3169275866.py:22: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  filtered_df['Absolute_Percentage_Error'] = abs((filtered_df[actual_col] - filtered_df[predicted_col]) / filtered_df[actual_col]) * 100\n",
-      "C:\\Users\\Darren\\AppData\\Local\\Temp\\ipykernel_29160\\1877111846.py:22: SettingWithCopyWarning: \n",
+      "C:\\Users\\Darren\\AppData\\Local\\Temp\\ipykernel_29160\\3169275866.py:22: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  filtered_df['Absolute_Percentage_Error'] = abs((filtered_df[actual_col] - filtered_df[predicted_col]) / filtered_df[actual_col]) * 100\n",
-      "C:\\Users\\Darren\\AppData\\Local\\Temp\\ipykernel_29160\\1877111846.py:22: SettingWithCopyWarning: \n",
+      "C:\\Users\\Darren\\AppData\\Local\\Temp\\ipykernel_29160\\3169275866.py:22: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  filtered_df['Absolute_Percentage_Error'] = abs((filtered_df[actual_col] - filtered_df[predicted_col]) / filtered_df[actual_col]) * 100\n",
-      "C:\\Users\\Darren\\AppData\\Local\\Temp\\ipykernel_29160\\1877111846.py:22: SettingWithCopyWarning: \n",
+      "C:\\Users\\Darren\\AppData\\Local\\Temp\\ipykernel_29160\\3169275866.py:22: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  filtered_df['Absolute_Percentage_Error'] = abs((filtered_df[actual_col] - filtered_df[predicted_col]) / filtered_df[actual_col]) * 100\n",
-      "C:\\Users\\Darren\\AppData\\Local\\Temp\\ipykernel_29160\\1877111846.py:22: SettingWithCopyWarning: \n",
+      "C:\\Users\\Darren\\AppData\\Local\\Temp\\ipykernel_29160\\3169275866.py:22: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1897,23 +1897,34 @@
     {
      "data": {
       "text/plain": [
-       "{'-01': 1.2364586151223134,\n",
-       " '-02': 1.696134975868042,\n",
-       " '-03': 1.047789974809469,\n",
-       " '-04': 1.4272388526468713,\n",
-       " '-05': 0.8750254631426533,\n",
-       " '-06': 1.310123116918766}"
+       "{'-01': 1.3826811670052428,\n",
+       " '-02': 1.7742305160451681,\n",
+       " '-03': 3.941746508024841,\n",
+       " '-04': 3.1994670388762776,\n",
+       " '-05': 1.0005820278314568,\n",
+       " '-06': 0.9560055689094742}"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
     }
    ],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "def calculate_mape(file_path, subject_col='Subject', predicted_col='GRGB BPM (dlib)', actual_col='BPM FFT (oxy)', row_filters=None):\n",
+    "def calculate_mape(file_path, subject_col='Subject', predicted_col='POS BPM (MediaPipe)', actual_col='BPM FFT (oxy)', row_filters=None):\n",
     "    # Read Excel file\n",
     "    df = pd.read_excel(file_path)\n",
     "\n",
